#816 Fix reviews focus-order-semantics

--- a/Magento_Review/templates/form.phtml
+++ b/Magento_Review/templates/form.phtml
@@ -46,7 +46,7 @@ $gqlViewModel = $viewModels->require(GraphqlViewModel::class);
 $recaptcha = $block->getData('viewModelRecaptcha');
 
 ?>
-<div class="mx-auto py-6 items-center" id="review-form" tabindex="0">
+<div class="mx-auto py-6 items-center" id="review-form" tabindex="-1">
     <div class="card w-full px-6 py-3">
         <div class="text-xl my-3">
             <?= $escaper->escapeHtml(__('Write Your Own Review')) ?>
@@ -358,7 +358,10 @@ mutation createProductReviewMutation(
                 }
             </script>
         <?php else: ?>
-            <div id="review-form">
+            <div
+                id="review-form"
+                tabindex="-1"
+            >
                 <div class="pb-6">
                     <?= $escaper->escapeHtml(
                         __(
