--- a/Magento_Review/templates/helper/summary_short.phtml
+++ b/Magento_Review/templates/helper/summary_short.phtml
@@ -38,7 +38,7 @@ $uniqueId = $productId . uniqid();
             ? '<?= $escaper->escapeJs(__('%1 rating. %2 out of %3 stars. Click to go to reviews.', $productName, $starsFilled + $starFragment, $ratingSteps))?>'
             : '<?= $escaper->escapeJs(__('%1 rating. %2 out of %3 stars', $productName, $starsFilled + $starFragment, $ratingSteps))?>'
         "
-        role="group"
+        role="button"
     >
         <?php if ($rating): ?>
             <?php $i = 0; ?>
