--- a/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
+++ b/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
@@ -233,6 +233,7 @@ $currentProduct = $viewModels->require(CurrentProduct::class);
             },
             clearOptionIfActive(optionId, value) {
                 if (this.selectedValues[optionId] === value) {
+                    this.blurLabel()
                     this.changeOption(optionId, '')
                 }
             },
