--- a/Magento_Swatches/templates/product/js/swatch-options.phtml
+++ b/Magento_Swatches/templates/product/js/swatch-options.phtml
@@ -162,6 +162,13 @@ use Magento\Framework\View\Element\Template;
             getTooltipLabel() {
                 return this.getSwatchConfig(this.activeTooltipItem.attribute, this.activeTooltipItem.item).label
             },
+            focusedLabel: false,
+            focusLabel(optionId) {
+                this.focusedLabel = optionId;
+            },
+            blurLabel() {
+                this.focusedLabel = false;
+            },
             showSwatches: false,
             initShowSwatchesIntersect() {
                 if ('IntersectionObserver' in window && !window.scrollY) {
