--- a/Magento_Swatches/templates/product/listing/renderer.phtml
+++ b/Magento_Swatches/templates/product/listing/renderer.phtml
@@ -178,9 +178,8 @@ $swatchItemBlock->setData('product_id', $productId);
         >
             <div class="w-full overflow-x-hidden swatch-attribute-options min-h-14">
                 <template x-if="showSwatches">
-                    <div
+                    <div class="flex flex-nowrap w-full overflow-auto snap items-center py-1"
                         id="attribute-label-<?= $escaper->escapeHtmlAttr($productId . '-' . $attributeId) ?>"
-                        class="flex flex-nowrap w-full overflow-auto snap items-center py-1"
                         role="radiogroup"
                         x-bind="scrollEvents"
                         aria-label="<?= $escaper->escapeHtml($productAttribute->getStoreLabel()) ?>"
