--- a/Magento_Theme/templates/html/notices.phtml
+++ b/Magento_Theme/templates/html/notices.phtml
@@ -25,7 +25,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
 
 <?php if ($block->displayNoscriptNotice()): ?>
     <noscript>
-        <section class="message global noscript shadow-none m-0 px-0 rounded-none font-normal">
+        <section class="message global noscript border-b-2 border-blue-500 bg-blue-50 shadow-none m-0 px-0 rounded-none font-normal">
             <div class="container text-center">
                 <p>
                     <strong><?= $escaper->escapeHtml(__('JavaScript seems to be disabled in your browser.')) ?></strong>
@@ -41,7 +41,12 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
 <?php endif; ?>
 
 <?php if ($block->displayNoLocalStorageNotice()): ?>
-    <section x-data x-show="typeof(Storage) === undefined" x-cloak class="message global local_storage shadow-none m-0 px-0 rounded-none font-normal">
+    <section
+        x-data
+        x-show="typeof(Storage) === undefined"
+        x-cloak
+        class="message global local_storage border-b-2 border-blue-500 bg-blue-50 shadow-none m-0 px-0 rounded-none font-normal"
+    >
         <div class="container text-center">
             <p>
                 <strong><?= $escaper->escapeHtml(__('Local Storage seems to be disabled in your browser.')) ?></strong>
@@ -54,7 +59,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
 <?php endif; ?>
 
 <?php if ($block->displayDemoNotice()): ?>
-    <section class="message global demo shadow-none m-0 px-0 rounded-none font-normal">
+    <section class="message global demo border-b-2 border-red-500 bg-red-50 shadow-none m-0 px-0 rounded-none font-normal">
         <div class="container text-center font-bold">
             <p><?= $escaper->escapeHtml(__('This is a demo store. No orders will be fulfilled.')) ?></p>
         </div>
