--- a/Magento_Theme/templates/html/header.phtml
+++ b/Magento_Theme/templates/html/header.phtml
@@ -8,12 +8,12 @@
 
 declare(strict_types=1);
 
-use Hyva\Theme\ViewModel\StoreConfig;
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\HeroiconsOutline;
+use Hyva\Theme\ViewModel\StoreConfig;
+use Magento\Checkout\Block\Cart\Sidebar as SidebarCart;
 use Magento\Framework\Escaper;
 use Magento\Framework\View\Element\Template;
-use Magento\Checkout\Block\Cart\Sidebar;
 
 /** @var Escaper $escaper */
 /** @var Template $block */
@@ -24,7 +24,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
 
 /** @var StoreConfig $storeConfig */
 $storeConfig = $viewModels->require(StoreConfig::class);
-$showMiniCart = $storeConfig->getStoreConfig(Sidebar::XML_PATH_CHECKOUT_SIDEBAR_DISPLAY);
+$showMiniCart = $storeConfig->getStoreConfig(SidebarCart::XML_PATH_CHECKOUT_SIDEBAR_DISPLAY);
 ?>
 <script>
     function initHeader () {
