Add product slider type class to the slider wrapper

--- a/Magento_Catalog/templates/product/slider/product-slider.phtml
+++ b/Magento_Catalog/templates/product/slider/product-slider.phtml
@@ -107,7 +107,7 @@ if (empty($sliderHtml)) {
     return '';
 }
 ?>
-<div class="product-slider">
+<div class="product-slider <?= $type ?>-product-slider">
     <div>
         <?= /* @noEscape */ $sliderHtml ?>
     </div>
