ADD: w-full with max on the wrapper to create the same effect as the col method

--- a/Magento_Wishlist/templates/sharing.phtml
+++ b/Magento_Wishlist/templates/sharing.phtml
@@ -66,8 +66,9 @@ use Magento\Wishlist\Block\Customer\Sharing;
                     <?= $escaper->escapeHtml(__('Email addresses, separated by commas')) ?>
                 </span>
             </label>
-            <div class="control">
+            <div class="control max-w-xl">
                 <textarea name="emails"
+                          class="w-full"
                           :class=" { 'border-red-500 focus:border-red-500 focus:ring-red-500': !isValid }"
                           rows="5"
                           id="email_address"
@@ -80,8 +81,8 @@ use Magento\Wishlist\Block\Customer\Sharing;
         </div>
         <div class="field text">
             <label class="label" for="message"><span><?= $escaper->escapeHtml(__('Message')) ?></span></label>
-            <div class="control">
-                <textarea id="message" name="message" rows="5" maxlength="<?= (int) $block->getTextSharingLimit() ?>"><?= /* @noEscape */ $block->getEnteredData('message') ?></textarea>
+            <div class="control max-w-xl">
+                <textarea id="message" name="message" class="w-full" rows="5" maxlength="<?= (int) $block->getTextSharingLimit() ?>"><?= /* @noEscape */ $block->getEnteredData('message') ?></textarea>
             </div>
         </div>
     </fieldset>
