--- a/Magento_Catalog/templates/product/list/item.phtml
+++ b/Magento_Catalog/templates/product/list/item.phtml
@@ -176,27 +176,29 @@ $productName = $catalogOutputHelper->productAttribute($product, $product->getNam
                 <?= $block->getChildBlock('stockstatus')->setData('product', $product)->toHtml() ?>
             </div>
             <?php endif; ?>
-            <?php if ($showAddToWishlist): ?>
-            <button x-data="initWishlist()"
-                    @click.prevent="addToWishlist(<?= (int)$productId ?>)"
-                    aria-label="<?= $escaper->escapeHtmlAttr(__('Add to Wish List') . ' ' . $productName) ?>"
-                    type="button"
-                    class="rounded-full w-9 h-9 bg-gray-200 p-0 border-0 inline-flex shrink-0 items-center justify-center text-gray-500 hover:text-red-600 ml-2">
-                <?= $heroiconsSolid->heartHtml("w-5 h-5", 25, 25, ['aria-hidden' => 'true']) ?>
-            </button>
-            <?php endif; ?>
-            <?php if ($showAddToCompare): ?>
-            <button x-data="initCompareOnProductList()"
-                    @click.prevent="addToCompare(<?= (int)$productId ?>)"
-                    aria-label="<?= $escaper->escapeHtmlAttr(__('Add to Compare') . ' ' . $productName) ?>"
-                    type="button"
-                    class="rounded-full w-9 h-9 bg-gray-200 p-0 border-0 inline-flex shrink-0 items-center justify-center text-gray-500 hover:text-yellow-500 ml-2">
-                <?= $heroicons->scaleHtml("w-5 h-5", 25, 25, ['aria-hidden' => 'true']) ?>
-            </button>
-            <?php endif; ?>
-            <?php if ($addToBlock = $block->getChildBlock('addto')): ?>
-                <?= $addToBlock->setProduct($product)->getChildHtml() ?>
-            <?php endif; ?>
+            <div class="flex flex-wrap gap-2">
+                <?php if ($showAddToWishlist): ?>
+                <button x-data="initWishlist()"
+                        @click.prevent="addToWishlist(<?= (int)$productId ?>)"
+                        aria-label="<?= $escaper->escapeHtmlAttr(__('Add to Wish List') . ' ' . $productName) ?>"
+                        type="button"
+                        class="rounded-full w-9 h-9 bg-gray-200 p-0 border-0 inline-flex shrink-0 items-center justify-center text-gray-500 hover:text-red-600">
+                    <?= $heroiconsSolid->heartHtml("w-5 h-5", 25, 25, ['aria-hidden' => 'true']) ?>
+                </button>
+                <?php endif; ?>
+                <?php if ($showAddToCompare): ?>
+                <button x-data="initCompareOnProductList()"
+                        @click.prevent="addToCompare(<?= (int)$productId ?>)"
+                        aria-label="<?= $escaper->escapeHtmlAttr(__('Add to Compare') . ' ' . $productName) ?>"
+                        type="button"
+                        class="rounded-full w-9 h-9 bg-gray-200 p-0 border-0 inline-flex shrink-0 items-center justify-center text-gray-500 hover:text-yellow-500">
+                    <?= $heroicons->scaleHtml("w-5 h-5", 25, 25, ['aria-hidden' => 'true']) ?>
+                </button>
+                <?php endif; ?>
+                <?php if ($addToBlock = $block->getChildBlock('addto')): ?>
+                    <?= $addToBlock->setProduct($product)->getChildHtml() ?>
+                <?php endif; ?>
+            </div>
         </div>
     </div>
 <?php if ($product->isSaleable()): ?>
