--- a/Magento_AdvancedSearch/templates/search_data.phtml
+++ b/Magento_AdvancedSearch/templates/search_data.phtml
@@ -34,11 +34,9 @@ use Magento\Search\Model\QueryResult;
                         <?php $resultsCount = $localeFormatter->formatNumber((int)$additionalInfo->getResultsCount()) ?>
                         <span
                             class="count"
-                            aria-label="<?= $escaper->escapeHtmlAttr(
-                                $resultsCount > 1
-                                    ? __('%1 search results', $resultsCount)
-                                    : __('%1 search result', $resultsCount)
-                            ) ?>"
+                            aria-label="<?= $escaper->escapeHtmlAttr($resultsCount > 1
+                                ? __('%1 search results', $resultsCount)
+                                : __('%1 search result', $resultsCount)) ?>"
                         >(<?= /* @noEscape */ $resultsCount ?>)</span>
                     <?php endif; ?>
                 </a>
