--- a/Magento_Checkout/templates/onepage/failure.phtml
+++ b/Magento_Checkout/templates/onepage/failure.phtml
@@ -20,8 +20,9 @@ use Magento\Checkout\Block\Onepage\Failure;
 <?php if ($error = $block->getErrorMessage()): ?>
     <p><?= $escaper->escapeHtml($error) ?></p>
 <?php endif ?>
-<p><?= $escaper->escapeHtml(
-    __('Click <a href="%1">here</a> to continue shopping.', $escaper->escapeUrl($block->getContinueShoppingUrl())),
-    ['a']
-) ?>
-</p>
+<div class="my-4">
+    <a class="btn btn-primary inline-flex" href="<?= $escaper->escapeUrl($block->getContinueShoppingUrl()) ?>">
+        <span><?= $escaper->escapeHtml(__('Continue Shopping')) ?></span>
+    </a>
+</div>
+
