#916 remove screen sm code this to improve user experience between sm and md breakpoints & between md and lg give .main also col-span-2, so it fits to grid-cols-3

--- a/web/tailwind/components/structure.css
+++ b/web/tailwind/components/structure.css
@@ -41,32 +41,6 @@ body {
     }
 }
 
-@screen sm {
-    .page-layout-2columns-left,
-    .page-layout-2columns-right,
-    .page-layout-3columns {
-        .columns {
-            @apply grid-cols-2;
-
-            .main {
-                @apply col-span-2;
-            }
-
-            .sidebar {
-                @apply order-3;
-            }
-        }
-    }
-
-    .page-with-filter {
-        .columns {
-            .sidebar-main {
-                @apply order-1 col-span-2;
-            }
-        }
-    }
-}
-
 @screen md {
     .page-layout-2columns-left,
     .page-layout-2columns-right,
@@ -75,7 +49,7 @@ body {
             @apply grid-cols-3;
 
             .main {
-                @apply row-span-2;
+                @apply row-span-2 col-span-2;
             }
 
             .sidebar {
