--- a/Magento_Paypal/templates/express/shortcut.phtml
+++ b/Magento_Paypal/templates/express/shortcut.phtml
@@ -6,10 +6,12 @@
  * See https://hyva.io/license
  */
 
-/**
- * @var \Magento\Paypal\Block\Express\Shortcut $block
- * @var \Magento\Framework\Escaper $escaper
- */
+use Magento\Framework\Escaper;
+use Magento\Paypal\Block\Express\Shortcut;
+
+/** @var Shortcut $block */
+/** @var Escaper $escaper */
+
 ?>
 <?php
 $labelPosition = '';
@@ -27,23 +29,23 @@ if ($block->getIsInCatalogProduct()) {
 <div class="paypal checkout <?= /* @noEscape */ $labelPosition ?> paypal-logo <?= /* @noEscape */ $shortcutHtmlId ?>"
 >
     <input type="image"
-           x-data="initPayPalExpress()"
+           x-data="initPayPalExpress(<?= $isInCatalogProduct ? 'true' : 'false' ?>)"
            @click.prevent="submitForm()"
            src="<?= $escaper->escapeUrl($block->getImageUrl()) ?>"
-           alt="<?= $escaper->escapeHtml(__('Checkout with PayPal')) ?>"
-           title="<?= $escaper->escapeHtml(__('Checkout with PayPal')) ?>"/>
+           alt="<?= $escaper->escapeHtmlAttr(__('Checkout with PayPal')) ?>"
+           title="<?= $escaper->escapeHtmlAttr(__('Checkout with PayPal')) ?>"/>
     <?php if ($block->getAdditionalLinkImage()): ?>
         <?php $linkImage = $block->getAdditionalLinkImage(); ?>
         <a href="<?= $escaper->escapeUrl($linkImage['href']) ?>">
-            <img loading="lazy" src="<?= $escaper->escapeHtml($linkImage['src']) ?>" />
+            <img loading="lazy" src="<?= $escaper->escapeHtmlAttr($linkImage['src']) ?>" />
         </a>
     <?php endif; ?>
 </div>
 
 <script>
-    function initPayPalExpress() {
+    function initPayPalExpress(isInCatalogProduct) {
         return {
-            isInCatalogProduct: <?= $isInCatalogProduct ? 'true' : 'false' ?>,
+            isInCatalogProduct,
             returnUrlId: 'return_url',
             submitForm() {
                 if (this.isInCatalogProduct) {
@@ -62,17 +64,15 @@ if ($block->getIsInCatalogProduct()) {
                     elReturnUrl.setAttribute('name', 'return_url');
                     elReturnUrl.setAttribute('value', returnUrlValue);
                     elReturnUrl.setAttribute('id', this.returnUrlId);
-
-                    document.getElementById(formParentId).appendChild(elReturnUrl);
+                    document.forms[formParentId].appendChild(elReturnUrl);
                 }
                 else {
                     document.getElementById(this.returnUrlId).value = returnUrlValue;
                 }
-                document.getElementById(formParentId).submit();
+                document.forms[formParentId].submit();
             },
             submitFromCart() {
-                const returnUrlValue = "<?= $escaper->escapeUrl($block->getCheckoutUrl()) ?>";
-                window.location = returnUrlValue;
+                window.location = "<?= $escaper->escapeUrl($block->getCheckoutUrl()) ?>";
             }
         }
     }
