#773 Add MSRP support on product detail pages

--- a/Magento_Msrp/templates/product/price/msrp.phtml
+++ b/Magento_Msrp/templates/product/price/msrp.phtml
@@ -34,7 +34,7 @@ $msrpPrice = $block->renderAmount(
         'skip_adjustments' => true
     ]
 );
-$priceElementIdPrefix = $block->getPriceElementIdPrefix() ? $block->getPriceElementIdPrefix() : 'product-price-';
+$priceElementIdPrefix = $block->getPriceElementIdPrefix() ?: 'product-price-';
 
 ?>
 
