--- a/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/Magento_Catalog/templates/product/view/product-info.phtml
@@ -66,7 +66,7 @@ $productType = $product->getTypeId();
 
         <?php if ($productType === 'bundle'): ?>
             <span class="sr-only">
-                <?= $escaper->escapeHtml(__('Price depends on the chosen options below')) ?>
+                <?= $escaper->escapeHtml(__('The price depends on the chosen options')) ?>
             </span>
         <?php endif; ?>
 
