#770 Fix mistake while applying code review change requests

--- a/Magento_Catalog/templates/product/list/item.phtml
+++ b/Magento_Catalog/templates/product/list/item.phtml
@@ -183,6 +183,7 @@ $productName = $catalogOutputHelper->productAttribute($product, $product->getNam
                     </span>
                 </button>
                 <?php endif; ?>
+            <?php else: ?>
             <div class="w-auto justify-center <?= $viewIsGrid ? 'mr-auto' : 'mr-auto md:mr-0' ?>">
                 <?= $block->getChildBlock('stockstatus')->setData('product', $product)->toHtml() ?>
             </div>
