--- a/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/Magento_Catalog/templates/product/view/product-info.phtml
@@ -43,10 +43,10 @@ $product = $productViewModel->getProduct();
         <?= $block->getChildHtml("alert.urls") ?>
     </div>
 
-        <?php foreach ($block->getAttributes() as $attributeConfig) {
     <dl id="product-details">
+        <?php foreach ($block->getAttributes() as $attributeConfig):
             $attribute = $attributesViewModel->getAttributeFromLayoutConfig($attributeConfig); ?>
-            <?php if ($value = $attribute['value'] ?? null) { ?>
+            <?php if ($value = $attribute['value'] ?? null): ?>
                 <div class="flex border-t border-gray-300 py-2 last:mb-6 last:border-b <?=/* @noEscape */ $attribute['value'] ?: "" ?>">
                     <dt class="w-1/2 text-left text-gray-700 product-detail-label">
                         <?= $escaper->escapeHtml($attribute['label']) ?>
@@ -55,8 +55,8 @@ $product = $productViewModel->getProduct();
                         <?= $escaper->escapeHtml($value) ?>
                     </dd>
                 </div>
-            <?php } ?>
-        <?php } ?>
+            <?php endif ?>
+        <?php endforeach; ?>
     </dl>
 
     <?= $block->getChildHtml('product.info.form') ?>
